# tme

./: README.md
tme/: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.py  tox.ini
tme/.github/: ISSUE_TEMPLATE.md
tme/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tme/src/tme/: __init__.py  cli.py
tme/tests/: __init__.py  test_tme.py
tme_project_omar/: .travis.yml  CONTRIBUTING.rst  Makefile  README.md  README.rst  pyproject.toml  setup.py  tox.ini
tme_project_omar/.github/: ISSUE_TEMPLATE.md
tme_project_omar/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tme_project_omar/src/tme/: __init__.py  cli.py
tme_project_omar/tests/: __init__.py  test_tme.py
