[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tme"
version = "0.1.0"
description = "A short description of your TME project"
authors = [{ name = "Omar Ferchichi", email = "ferchichiomar20@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "setuptools>=61.0",
    # Add any other dependencies your project requires here
]

[tool.setuptools.packages.find]
where = ["src"]
