[project]
name = "tme"
version = "0.1.0"
authors = [
    { name = "Omar Ferchichi", email = "ferchichiomar20@gmail.com" }
]
description = "Your project description"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/omar20ferchichi/tme"
Issues = "https://github.com/omar20ferchichi/tme/issues"
