[project]
name = "tme_project_omar_project_omar"
version = "0.1.0"
authors = [
    { name = "Omar Ferchichi", email = "ferchichiomar20@gmail.com" }
]
description = "Your project description"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

# Do not include `license` in dynamic
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/omar20ferchichi/tme_project_omar"
Issues = "https://github.com/omar20ferchichi/tme_project_omar/issues"
